implemented authorization and loading animation

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,6 @@ CLOUDINARY_API_SECRET=qKtFaZZvIqM1U-CbQlqefmzvDeI
 CLOUDINARY_CLOUD_NAME=dt8lfhjwm
 
 NODE_ENV=development
+
+CLERK_PUBLISHABLE_KEY=pk_test_YWN0aXZlLXB1Zy04NC5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_enygAgQ4BQCeIhNrDKhjCQpxRZ66DypUs7kFuJlFFc
