--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js",
+    "seed:songs": "node src/seeds/song.js",
+    "seed:albums": "node src/seeds/album.js"
   },
   "dependencies": {
     "@clerk/express": "^1.4.7",
